# openagent-sdk

./: .gitignore  README.md  pyproject.toml
examples/: api_server.py  basic.py
src/openagent/: __init__.py
src/openagent/api/: __init__.py  server.py
src/openagent/cli/: main.py
src/openagent/core/: encryption.py  engine.py  redis_storage.py  state.py  storage.py
src/openagent/mcp/: __init__.py  server.py
src/openagent/tools/: __init__.py  registry.py
src/openagent/web/: __init__.py  app.py
src/openagent/web/static/css/: style.css
src/openagent/web/static/js/: api.js  dashboard.js  decisions.js  notes.js  plan.js
src/openagent/web/templates/: decisions.html  index.html  notes.html  plan.html
tests/: test_mcp_server.py  test_redis_storage.py  test_state.py  test_storage.py
